--- a/publishing.html
+++ b/publishing.html
@@ -239,19 +239,6 @@
 					<dd><a href="http://www.flickr.com/photos/brainscanstudios/sets/72157605400196782/">Fiendish Fables Gallery</a></dd>
 				  </dl>
 
-				  <dl>
-				  	<dt>Get the book (downloadable)</dt>
-					<dd><a href="http://comics.drivethrustuff.com/product_info.php?products_id=60494&filters=0_0_0&manufacturers_id=2576">DriveThru Comics</a></dd>
-					<dd><a href="http://www.lulu.com/content/2418291">Lulu</a></dd>
-					<dd><a href="http://www.scribd.com/doc/15757663/Fiendish-Fables">Scribd</a></dd>
-					<dd><a href="http://www.wowio.com/users/product.asp?BookId=1355">Wowio</a></dd>
-				  </dl>
-				
-				<dl>
-					<dt>Get the book (print)</dt>
-					<dd><a href="http://www.milehighcomics.com/cgi-bin/backissue.cgi?action=list&title=31810235121&snumber=1">Mile High Comics</a></dd>
-				  </dl>
-
 				  <p class="media-grid" style="width:200px;margin-left:auto;margin-right:auto;"><a href="#"><img src="http://farm4.static.flickr.com/3175/2546292863_fa33cce510.jpg" class="thumbnail" width="125" height="193"/></a></p>
 			    </div>
 			  </div><!-- /row -->
@@ -264,19 +251,6 @@
 				  	<dt>A one-shot by Rich Johnston &amp; friends</dt>
 					<dd>October 18th, 2006 in e-book and print formats</dd>
 					<dd><a href="http://www.flickr.com/photos/brainscanstudios/sets/72157605405920953/">Civil Wardrobe Gallery</a></dd>
-				  </dl>
-
-				  <dl>
-				  	<dt>Get the book (downloadable)</dt>
-					<dd><a href="http://comics.drivethrustuff.com/product_info.php?products_id=60485&filters=0_0_0&manufacturers_id=2576">DriveThru Comics</a></dd>
-					<dd><a href="http://www.lulu.com/content/2417814">Lulu</a></dd>
-					<dd><a href="http://www.scribd.com/doc/15757488/Civil-Wardrobe-Full">Scribd</a></dd>
-					<dd><a href="http://www.wowio.com/users/product.asp?BookId=1354">Wowio</a></dd>
-				  </dl>
-
-				  <dl>
-					<dt>Get the book (print)</dt>
-					<dd><a href="http://www.milehighcomics.com/cgi-bin/backissue.cgi?action=list&title=17111531978&snumber=1">Mile High Comics</a></dd>
 				  </dl>
 
 				  <p class="media-grid" style="width:200px;margin-left:auto;margin-right:auto;"><a href="#"><img src="http://farm3.static.flickr.com/2257/2546275683_ccfc1d2a66.jpg" class="thumbnail" width="125" height="193"/></a></p>
@@ -294,14 +268,7 @@
 				  <dl>
 				  	<dt>Get the book (downloadable)</dt>
 					<dd><a href="http://comics.drivethrustuff.com/product_info.php?products_id=60482&filters=0_0_0&manufacturers_id=2576">DriveThru Comics</a></dd>
-					<dd><a href="http://www.lulu.com/content/2412513">Lulu</a></dd>
-					<dd><a href="http://www.scribd.com/doc/6258433/Touch-of-Death-Issue-3">Scribd</a></dd>
-					<dd><a href="http://www.wowio.com/users/product.asp?BookId=1354">Wowio</a></dd>
-				  </dl>
-
-				<dl>
-					<dt>Get the book (print)</dt>
-					<dd><a href="http://www.milehighcomics.com/cgi-bin/backissue.cgi?action=list&title=89260739451&snumber=1">Mile High Comics</a></dd>
+					<dd><a href="https://www.lulu.com/en/us/shop/brian-kirsten/touch-of-death-3/ebook/product-1rgyp98w.html?page=1&pageSize=4">Lulu</a></dd>
 				  </dl>
 
 				  <p class="media-grid" style="width:200px;margin-left:auto;margin-right:auto;"><a href="#"><img src="http://farm4.static.flickr.com/3156/2546383229_654ba534d3.jpg" class="thumbnail" width="125" height="193"/></a></p>
