--- a/publishing.html
+++ b/publishing.html
@@ -288,14 +288,7 @@
 				  <dl>
 				  	<dt>Get the book (downloadable)</dt>
 					<dd><a href="http://comics.drivethrustuff.com/product_info.php?products_id=60478&filters=0_0_0&manufacturers_id=2576">DriveThru Comics</a></dd>
-					<dd><a href="http://www.lulu.com/content/2406810">Lulu</a></dd>
-					<dd><a href="http://www.scribd.com/doc/6257889/Touch-of-Death-Issue-2">Scribd</a></dd>
-					<dd><a href="http://www.wowio.com/users/product.asp?BookId=1354">Wowio</a></dd>
-				  </dl>
-
-				  <dl>
-					<dt>Get the book (print)</dt>
-					<dd><a href="http://www.milehighcomics.com/cgi-bin/backissue.cgi?action=list&title=89260739451&snumber=1">Mile High Comics</a></dd>
+					<dd><a href="https://www.lulu.com/en/us/shop/brian-kirsten/touch-of-death-2/ebook/product-16qp8gp9.html?page=1&pageSize=4">Lulu</a></dd>
 				  </dl>
 
 				  <p class="media-grid" style="width:200px;margin-left:auto;margin-right:auto;"><a href="#"><img src="http://farm3.static.flickr.com/2160/2547188820_5b5d3d6fa6.jpg" class="thumbnail" width="125" height="193"/></a></p>
@@ -313,16 +306,10 @@
 				  <dl>
 				  	<dt>Get the book (downloadable)</dt>
 					<dd><a href="http://comics.drivethrustuff.com/product_info.php?products_id=60477">DriveThru Comics</a></dd>
-					<dd><a href="http://www.lulu.com/content/1901406">Lulu</a></dd>
-					<dd><a href="http://www.scribd.com/doc/6256852/Touch-of-Death-Issue-1">Scribd</a></dd>
+					<dd><a href="https://www.lulu.com/en/us/shop/brian-kirsten/touch-of-death-1/ebook/product-16qpn8g6.html?page=1&pageSize=4">Lulu</a></dd>
 					<dd><a href="http://www.amazon.com/Touch-of-Death-1-ebook/dp/B0027P8AYY/ref=sr_1_28?ie=UTF8&s=digital-text&qid=1240835548&sr=1-28">Amazon</a></dd>
-					<dd><a href="http://www.wowio.com/users/product.asp?BookId=1354">Wowio</a></dd>
 				  </dl>
 
-				<dl>
-					<dt>Get the book (print)</dt>
-					<dd><a href="http://www.milehighcomics.com/cgi-bin/backissue.cgi?action=list&title=89260739451&snumber=1">Mile High Comics</a></dd>
-				  </dl>
 
 				  <p class="media-grid" style="width:200px;margin-left:auto;margin-right:auto;"><a href="#"><img src="http://farm4.static.flickr.com/3175/2546355849_73af9c47ff.jpg" class="thumbnail" width="125" height="193"/></a></p>
 			    </div>
