--- a/products.html
+++ b/products.html
@@ -8,19 +8,31 @@
 	<meta name="author" content="Brian Kirsten">
 	
 	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	
-	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+
+	<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 	
 
 	<style type="text/css">
-	
-		/*.jumbotron {
-			min-width: 640px;
-			padding-top: 55px;
-			padding-bottom: 25px;
-		}*/
-		
+		/* Bootstrap 5 removed .jumbotron, adding back for compatibility */
+		.jumbotron {
+			padding: 2rem 1rem;
+			margin-bottom: 2rem;
+			background-color: #e9ecef;
+			border-radius: 0.3rem;
+		}
+
+		/* Bootstrap 5 removed .thumbnail, adding back for compatibility */
+		.thumbnail {
+			display: inline-block;
+			padding: 4px;
+			line-height: 1.42857143;
+			background-color: #fff;
+			border: 1px solid #ddd;
+			border-radius: 4px;
+			transition: border .2s ease-in-out;
+		}
+
 		.jumbotron .lead {
 			font-size: 20px;
 			line-height: 27px;
@@ -150,6 +162,9 @@
 			pageTracker._initData();
 			pageTracker._trackPageview();
 			</script>
+
+			<!-- Bootstrap 5 Bundle (includes Popper) -->
+			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 
 </body>
 </html>
