adding link to Alt Auctions

--- a/index.html
+++ b/index.html
@@ -831,6 +831,9 @@
                     </div>
                     <h3>Trading Cards & Collectibles</h3>
                     <p>We buy, sell, and trade sports cards and premium collectibles. Our focus includes vintage and modern sports cards, trading card games, and other collectible items. Whether you're a serious collector or just getting started, we're always interested in discussing opportunities to buy collections or connect collectors with the cards they're looking for.</p>
+                    <a href="https://app.alt.xyz/liquid-auctions?seller=brainscanstudios&sortBy=highest_price_first" target="_blank" rel="noopener" style="display: inline-flex; align-items: center; gap: 0.5rem; margin-top: 1.5rem; color: var(--accent); text-decoration: none; font-weight: 500; transition: opacity 0.2s ease;">
+                        View our auctions on Alt →
+                    </a>
                 </div>
             </div>
         </div>
