--- a/index.html
+++ b/index.html
@@ -679,6 +679,15 @@
             }
         }
     </style>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0X1FW0Z4S1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-0X1FW0Z4S1');
+    </script>
 </head>
 <body>
     <!-- Navigation -->
